improvements to Sitebricks Info website

--- a/sitebricks-web/src/main/resources/main.css
+++ b/sitebricks-web/src/main/resources/main.css
@@ -23,22 +23,31 @@ header {
 }
 
 header div.groove {
-  /*height: 2px;*/
   border-top: 1px solid #aaa;
   border-bottom: 1px solid #eee;
 }
 
 header nav {
-
+  position: absolute;
+  left: 18%;
 }
 
 header nav ul {
   position: relative;
+  top: -8px;
+  list-style-type: none;
 }
 
 header nav ul li {
   float: left;
-  width: 30px;
+  margin-right: 10px;
+  background: #cfcfcf;
+  -webkit-border-radius: 5px;
+  padding: 5px 8px;
+  font-size: 90%;
+  line-height: 0.8;
+  color: white;
+  cursor: pointer;
 }
 
 input.searchbox {
@@ -70,40 +79,63 @@ nav#left ul a:hover {
 
 nav#left ul a {
   text-decoration: none;
+  color: #993300;
+  padding: 4px 8px;
+  -webkit-border-radius: 4px;
 }
 
 nav#left ul li:first-child {
-  margin-left: -20px;
+  margin-left: -14px;
+}
+
+nav#left ul li {
+  margin-bottom: 6px;
 }
 
 /** content section **/
 h2 {
-  padding: 8px 12px;
+  padding: 10px 14px;
   font-size: 20px;
-  background: #555;
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    color-stop(0.0, #666),
-    color-stop(1.0, #111)
-  );
+  background: #383838;
   color: #eee;
-  text-shadow: -1px 1px 2px #777;
-  -webkit-border-radius: 8px;
+  text-shadow: 1px 1px 1px #666;
+  -webkit-border-radius: 10px;
+}
+
+h3 {
+  margin-top: 28px;
+  padding-left: 4px;
+  padding-right: 4px;
+  padding-bottom: 4px;
+  font-size: 18px;
+  font-weight: lighter;
+  border-bottom: 1px solid #888;
+}
+
+h4 {
+  padding: 0 4px;
+  margin-top: 24px;
+  margin-bottom: 16px;
+  font-size: 16px;
+  font-weight: normal;
 }
 
 section#main {
   position: absolute;
-  left: 20%;
-  right: 1%;
-  margin-top: 10px;
-  width: 620px;
+  left: 22%;
+  right: 0;
+  bottom: 0;
+  top: 49px;
+  overflow: auto;
+}
 
+article {
+  margin-top: 20px;
+  width: 620px;
 }
 
 article a {
-  color: #2D8DD5;
+  color: #666;
   text-decoration: none;
 }
 
